--- a/Client/src/pages/Register/Register.css
+++ b/Client/src/pages/Register/Register.css
@@ -1,10 +1,10 @@
-.login-container {
+.register-container {
   min-height: 100vh;
   position: relative;
   background-color: #000;
 }
 
-.login-background {
+.register-background {
   position: absolute;
   top: 0;
   left: 0;
@@ -13,7 +13,7 @@
   overflow: hidden;
 }
 
-.login-background img {
+.register-background img {
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -34,10 +34,13 @@
   );
 }
 
-.login-header {
+.register-header {
   position: relative;
   padding: 24px 48px;
   z-index: 1;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .netflix-logo {
@@ -45,7 +48,18 @@
   width: auto;
 }
 
-.login-content {
+.signin-link {
+  color: #fff;
+  text-decoration: none;
+  font-size: 19px;
+  font-weight: 500;
+}
+
+.signin-link:hover {
+  text-decoration: underline;
+}
+
+.register-content {
   position: relative;
   z-index: 1;
   min-height: calc(100vh - 93px);
@@ -55,7 +69,7 @@
   padding: 0 48px;
 }
 
-.login-form-container {
+.register-form-container {
   background-color: rgba(0, 0, 0, 0.75);
   padding: 60px 68px 40px;
   border-radius: 4px;
@@ -63,7 +77,7 @@
   max-width: 450px;
 }
 
-.login-form-container h1 {
+.register-form-container h1 {
   color: #fff;
   font-size: 32px;
   font-weight: 500;
@@ -74,7 +88,8 @@
   margin-bottom: 16px;
 }
 
-.form-group input {
+.form-group input,
+.form-group select {
   width: 100%;
   height: 50px;
   background: #333;
@@ -101,7 +116,16 @@
   color: #8c8c8c;
 }
 
-.login-button {
+.role-select {
+  appearance: none;
+  background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='white'%3e%3cpath d='M7 10l5 5 5-5z'/%3e%3c/svg%3e");
+  background-repeat: no-repeat;
+  background-position: right 10px center;
+  background-size: 24px;
+  cursor: pointer;
+}
+
+.register-button {
   width: 100%;
   height: 50px;
   background: #e50914;
@@ -115,57 +139,17 @@
   transition: background-color 0.2s;
 }
 
-.login-button:hover {
+.register-button:hover {
   background: #f40612;
 }
 
-.form-options {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  color: #b3b3b3;
-  font-size: 13px;
-}
-
-.checkbox-container {
-  display: flex;
-  align-items: center;
-  gap: 4px;
-  cursor: pointer;
-}
-
-.checkbox-container input[type="checkbox"] {
-  width: 16px;
-  height: 16px;
-  cursor: pointer;
-}
-
-.help-link {
-  color: #b3b3b3;
-  text-decoration: none;
-}
-
-.help-link:hover {
-  text-decoration: underline;
-}
-
-.login-footer {
+.register-footer {
   margin-top: 60px;
   color: #737373;
 }
 
-.signup-link {
-  color: #fff;
-  text-decoration: none;
-}
-
-.signup-link:hover {
-  text-decoration: underline;
-}
-
 .recaptcha-terms {
   display: block;
-  margin-top: 11px;
   font-size: 13px;
   color: #8c8c8c;
 }
@@ -180,7 +164,7 @@
 }
 
 @media (max-width: 740px) {
-  .login-header {
+  .register-header {
     padding: 24px;
   }
 
@@ -188,13 +172,17 @@
     height: 32px;
   }
 
-  .login-content {
+  .register-content {
     padding: 0 24px;
     min-height: calc(100vh - 80px);
   }
 
-  .login-form-container {
+  .register-form-container {
     padding: 30px 20px;
     background: transparent;
   }
-}
+
+  .signin-link {
+    font-size: 16px;
+  }
+} 
