--- a/Client/src/pages/Login/Login.css
+++ b/Client/src/pages/Login/Login.css
@@ -46,12 +46,20 @@
   padding: 20px;
   position: relative;
   z-index: 1;
+  display: flex;
+  align-items: center;
+}
+
+.logo-link {
+  display: inline-block;
+  text-decoration: none;
 }
 
 .tenflix-logo {
-  height: 45px;
+  height: 80px;
   width: auto;
   cursor: pointer;
+  display: block;
 }
 
 .login-content {
