--- a/Client/src/components/Navbar/Navbar.css
+++ b/Client/src/components/Navbar/Navbar.css
@@ -99,7 +99,16 @@
 
 .navbar-left li.active {
   color: white;
-  font-weight: 600;
+  font-weight: 500;
+}
+
+.navbar-left ul li a {
+  color: inherit;
+  text-decoration: none;
+}
+
+.navbar-left ul li a:hover {
+  text-decoration: none;
 }
 
 .navbar-right {
